# forge-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  main.py  pyproject.toml  sources.yml
apps/models/: __init__.py  address.py  patient.py
apps/routers/: patients.py  users.py
data/: selic.py
requirements/: dev.txt  prod.txt
src/: dbs.py  financial.py  logger.py  selic.py  settings.py  taxes.py
