[tool.poetry]
name = "template-api-python"
version = "0.1.0"
description = ""
authors = ["Eduardo Cardoso Paes"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.9"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
