[tool.poetry]
name = "forge-app"
version = "0.1.0"
description = ""
authors = ["Eduardo Cardoso Paes", "André Gustavo Lucas"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
dash = "^2.11.1"
pandas = "^2.0.3"
python-dotenv = "^1.0.0"
dash-bootstrap-components = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.9"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
